src/components/_modals/CreatePost/CreatePost.module.css
.modal-wrapper {
  background-color: white;
  width: 63rem;
  /* width: 100%; */
  mix-blend-mode: normal;
  border-radius: var(--spacing-8);
}

.modal-heading {
  padding: var(--spacing-16) var(--spacing-24);
  font-weight: 600;
  font-size: 18px;
  line-height: 26px;
  /* identical to box height, or 144% */

  color: #000000;
}

.create-post-modal {
  display: flex;
  justify-content: space-between;
  gap: calc(var(--spacing-40) + var(--spacing-8));
  padding: 0 var(--spacing-24);
}

.create-post-modal>section {
  flex-grow: 1;
  height: 485px;
  border-radius: 8px;
}

.create-post-modal>aside {
  width: 242px;
  min-width: 242px;
  display: flex;
  flex-direction: column;
  gap: var(--spacing-32);
  padding-bottom: 16px;
  padding-top: 0;
  z-index: 2;
}

.create-post-modal>aside div {
  display: grid;
  flex-direction: column;
  gap: var(--spacing-4);
  /* background-color: #ffffff; */
  border-radius: 8px;
}

.create-post-modal>aside div label {
  font-weight: 500;
  font-size: 14px;
  line-height: 22px;
  color: #6d747a;

  background-color: #f8f9fa;
  z-index: 1;
}

.who-can-view {
  display: flex;
  align-items: center;
  gap: var(--spacing-8);
  padding: var(--spacing-12);
  width: 100%;

  background: #ffffff;

  border: 1px solid #ced4da;
  border-radius: 8px;
}

.who-can-view .name {
  font-weight: 500;
  font-size: 16px;
  line-height: 20px;
  color: #6d747a;
}

.who-can-view svg {
  margin-left: auto;
}

/* Dropdown */
.input-box {
  display: flex;
  flex-direction: column;
  gap: var(--spacing-4);
  position: relative;
  /* margin-bottom: var(--spacing-32); */
}

.input-box label {
  /* font-family: 'Poppins'; */
  /* font-style: normal; */
  font-weight: 500;
  font-size: 14px;
  line-height: 22px;
  color: #6d747a;
}

.input-box input[type='text'] {
  width: 100%;
  background: #fff;
  border: 1px solid #ebedf0;
  border-radius: 8px;
  padding: calc(var(--spacing-8) + var(--spacing-4));

  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  min-width: 6.25rem;
  border: 1px solid #ced4da;
  border-radius: 8px;
  max-width: 215px;
}

.input-box input[type='text']:focus-within {
  outline: none;
  border: 1px solid rgb(var(--primary-50-rgb));
  outline: 1px solid rgb(var(--primary-10-rgb));
}

.input-box:has(input[required]) label::after {
  content: '*';
  color: rgba(192, 80, 77, 1);
}

.dropdown-wrapper {
  position: relative;
}

.dropdown-wrapper .dropdown {
  width: 100%;
  position: absolute;
  left: 0;
  right: 0;
  top: calc(100% + var(--spacing-4));
  background: #ffffff;
  border-radius: var(--spacing-4);
  padding: var(--spacing-4);
  filter: drop-shadow(0px 0px 2px rgba(147, 156, 163, 0.36)) drop-shadow(0px 8px 12px rgba(147, 156, 163, 0.12));
  z-index: 20;
}

.dropdown-wrapper .dropdown p {
  font-family: 'Poppins';
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 18px;

  letter-spacing: 0.005em;

  border-radius: 4px;
  padding: var(--spacing-8);
  color: #6d747a;
  cursor: pointer;
}

.dropdown-wrapper .dropdown p:hover {
  background: #f7f5f9;
  color: #8064a2;
}

.create-post-btn {
  border: none;
  width: 99px;
  height: 40px;
  font-weight: 600;
  font-size: 14px;
  line-height: 16px;
  color: #ffffff;

  background: #8064a2;
  border-radius: 8px;
  cursor: pointer;
  margin-left: auto;
  margin-top: auto;
}

.imgWrapper {

  max-height: 50%;

  width: 100%;
  margin-top: 0rem;

  position: relative;
  padding: 10px 0;

}

.videoWrapper {
  display: flex;
  align-items: center;
  margin-top: 0rem;
  column-gap: 12px;
  position: relative;
  overflow: hidden;
}

.imgContainer {

  display: flex;
  align-items: center;
  height: 210%;
  column-gap: 12px;

}

.imgContainer>img {
  height: 100%;
  width: 100%;
  aspect-ratio: 16 / 9;
  object-fit: contain;
  transition: 0.2s ease-in-out;
  position: relative;

  top: 0;
  left: 0;
}

.editor-container {
  display: flex;
  flex-direction: column;
  align-items: stretch;
  max-width: calc(100vw - 3rem);
  overflow: auto;
}

.show-metadata {
  position: relative;
  max-height: 50%;
  width: 100%;
  background-color: #EBEDF0;
  margin-bottom: 8px;
}

.metadata-image {
  max-width: 100%;
}

.metadata-content {
  padding: 8px 8px 16px;
  display: flex;
  flex-direction: row;
  gap: 12px;
  align-items: center;
}

.metadata-content>img {
  max-width: 40px;
}

.metadata-content>div {
  display: flex;
  flex-direction: column;
  gap: 0px;
}

.metadata-content .metadata-title {
  font-size: 12px;
  font-weight: 600;
}

.metadata-content .metadata-url {
  font-size: 12px;
  color: rgba(var(--gray-50-rgb));
}

.metadata-close-icon {
  position: absolute;
  right: 8px;
  top: 8px;
  cursor: pointer;
}

.visibility-dropdown>div {
  padding-top: 9px;
  padding-bottom: 9px;
  padding-right: 0;
  padding-left: 8px;
  width: -webkit-fill-available;

  font-weight: 500;
  font-size: 16px;
  line-height: 20px;
  color: #6d747a;
}

.relative {
  position: relative;
}

.img-cancel-icon {
  position: absolute;
  top: 15px;
  right: 5px;
  width: 20px;
  height: 20px !important;
  cursor: pointer;
  z-index: 40;
}

.input-box.error-input-box>div:hover fieldset {
  border: 1px solid rgba(192, 80, 77, 1);
}

.input-box.error-input-box>div>fieldset {
  border: 1px solid rgba(192, 80, 77, 1);
  color: rgba(192, 80, 77, 1);
}

.error-text {
  color: rgba(192, 80, 77, 1);
  font-size: 12px;
  margin-top: 4px;
  position: absolute;
  bottom: -4px;
  transform: translateY(100%);
  left: 0;
}

.dropdown-value {
  padding-left: 8px;
  padding-right: 8px;
}

.background {
  position: absolute;
  top: 0;
  right: 0;
  width: 290px;
  height: 100%;
  background-color: #f8f9fa;
  z-index: 1;
  border-radius: 0 8px 8px 0;
}

.posting-as-container {
  position: relative;
  z-index: 1000;
}

.optionsContainerUnactiveClass{
  max-height: 0 !important;
}

.options-container-class{
  max-height: 250px !important;
  overflow-y: auto !important;
  z-index: 1005 !important;
}

@media screen and (max-width: 1100px) {
  .create-post-modal {
    flex-direction: column;
    padding-left: 1.5rem;
    padding-right: 1.5rem;
    gap: 16px;
    overflow-y: scroll;
  }

  .create-post-modal>aside {
    gap: 24px;
  }

  .create-post-modal>aside div label {
    background-color: white;
  }

  .create-post-modal>aside>div>section {
    width: 100%;
  }

  .modal-wrapper {
    /* max-width: 350px; */
    width: 100%;
    border-radius: 0;
  }

  .create-post-btn {
    width: 100%;
  }

  .background {
    display: none;
  }

  .modal-heading::before {
    display: none !important;
  }

  .create-post-modal>aside {
    width: 100%;
  }

  .show-metadata {
    max-height: none;
    width: 100%;
  }

  .metadata-content .metadata-url {
    max-width: calc(100vw - 9rem);
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
  }

  .profile-switcher-parent {
    height: 50px !important;
    padding: 8px 12px !important;
  }

  .full-width-all {
    max-width: unset !important;
  }

  .full-width-all>div:last-of-type {
    max-width: unset !important;
  }

  .input-select {
    height: 40px !important;
    display: flex !important;
    justify-content: center !important;
    align-items: stretch !important;
  }

  .input-select>header>p {
    color: var(--Grey-Darker, #6D747A) !important;
    font-family: 'poppins' !important;
    font-size: 14px !important;
    font-style: normal !important;
    font-weight: 500 !important;
    line-height: 24px !important;
    /* 171.429% */
  }
  .optionsContainerUnactiveClass{
  bottom: calc(100% - 14px) !important;
  top: unset !important;
  }
}

.modal-heading::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 29%;
  height: 100%;
  left: 71%;
  background-color: #f8f9fa;
  border-radius: 0 8px 8px 0;
}

